import { shallow } from 'enzyme';
import React from "react";
import CounterButton from './CounterButton';

it('expect to render CounterButton component', () => {
  const mockColor = "blue";
  expect(shallow(<CounterButton color={mockColor}/>)).toMatchSnapshot();
  // expect(shallow(<CardList />).length).toEqual(1);
});

it('correctly increments the counter', () => {
  const mockColor = "blue";
  const wrapper = (shallow(<CounterButton color={mockColor}/>));
  
  wrapper.find('[id="counter"]').simulate('click');
  expect(wrapper.state()).toEqual({count: 1});
});